Fixed bug with img spilling out of container on hover

--- a/src/components/RecipeItem.css
+++ b/src/components/RecipeItem.css
@@ -9,8 +9,8 @@ a .recipe-card{
   text-decoration: none;
   border-radius: 1rem;
   cursor: pointer;
-  transition: all .75s ease-in-out;
-  box-sizing: border-box;
+  transition: all .5s ease-in-out;
+  padding: .5rem;
 }
 
 .recipe-card:hover{
@@ -18,8 +18,7 @@ a .recipe-card{
 }
 
 .recipe-card:hover .recipe-img{
-  position: relative;
-  transform: scale(1.5);
+  transform: scale(2);
 }
 
 a {
@@ -35,15 +34,16 @@ a {
   box-sizing: border-box;
   position: relative;
   overflow: hidden;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 .recipe-img{
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
   display: inline-block;
-  position: relative;
 }
 
 .title-container{
